--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     },
     "homepage": "https://github.com/btsimonh/node-red-contrib-flowman",
     "dependencies": {
-        "fs-extra": "latest",
-        "node-red": "latest"
+        "fs-extra": "latest"
     },
     "maintainers": [
         {
